--- a/v1/themes/hugo-universal-theme/static/css/team-members.css
+++ b/v1/themes/hugo-universal-theme/static/css/team-members.css
@@ -16,6 +16,12 @@ ul {
 a {
     text-decoration: none;
 }
+.swipable-buttons {
+  display: flex;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
 
 /* #Electrical, #Web,#Operation ,#LogisticsAndPlanning,#Mechanical,#Autonomous{
     display: none;
@@ -217,10 +223,10 @@ button:hover {
     color: #555;
     text-align: center;
     font-family: "Sen", Arial, Helvetica, sans-serif;
-    font-size: 30px;
+    font-size: 1.5rem;
     font-style: normal;
     font-weight: 400;
-    line-height: 40px;
+    /* line-height: 40px; */
 
     text-align: center;
     margin-bottom: 50px;
