--- a/v1/themes/hugo-universal-theme/layouts/partials/entry.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/entry.html
@@ -5,8 +5,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1>The top <strong style="color: #21a99f;">  eco-racing</strong> team in the MENA region.</h1>
+                    <h1>The top <strong style="color: #21a99f;"> eco-racing</strong> team in the MENA region.</h1>
                     <p>Join us in shaping a greener and more sustainable future through the power of innovation.</p>
+                    {{partial "announcements.html" .}}
                 </div>
             </div>
         </div>
