Update config.toml, delete achievement file, update iftar announcement, and modify index.html and announcements.html layouts

--- a/v1/themes/hugo-universal-theme/layouts/index.html
+++ b/v1/themes/hugo-universal-theme/layouts/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
 
-  <head>
-    {{ partial "headers.html" . }}
-    {{ partial "custom_headers.html" . }}
-  </head>
+<head>
+  {{ partial "headers.html" . }}
+  {{ partial "custom_headers.html" . }}
+</head>
 
-  <body>
+<body>
 
-    <div id="all">
+  <div id="all">
 
-        {{ partial "nav.html" . }}
+    {{ partial "nav.html" . }}
 
-        {{ partial "entry.html" . }}
-        
+    {{ partial "entry.html" . }}
+    {{ partial "announcements.html" .}}
 
-        {{ partial "testimonials.html" . }}
+    {{ partial "testimonials.html" . }}
 
-        {{ partial "clients.html" . }}
+    {{ partial "clients.html" . }}
 
-        {{ partial "recent_posts.html" . }}
-        
-        {{ partial "see_more.html" . }}
+    {{ partial "recent_posts.html" . }}
 
-        {{ partial "footer.html" . }}
+    {{ partial "see_more.html" . }}
 
-    </div>
-    <!-- /#all -->
+    {{ partial "footer.html" . }}
 
-    {{ partial "scripts.html" . }}
+  </div>
+  <!-- /#all -->
 
-  </body>
+  {{ partial "scripts.html" . }}
+
+</body>
+
 </html>
