--- a/v1/themes/hugo-universal-theme/layouts/partials/announcements.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/announcements.html
@@ -25,20 +25,21 @@
 
                     {{ range sort .Site.Data.announcements "weight" }}
                     <li class="item" style="width: 100%; background: transparent;">
-                        <div class=" testimonial same-height-always"
-                            style="display: flex; justify-content: space-between; width: 100%;background: transparent;">
-                            <div class="bottom" style="flex-grow: 1;">
+                        <div class="testimonial same-height-always"
+                            style="display: flex; justify-content: space-between; width: 100%; background: transparent;">
+                            <div class="bottom"
+                                style="flex-grow: 0.5; display: flex; flex-direction: column; align-items: baseline;">
                                 <div class="name-picture">
                                     <h2>{{ .title }}</h2>
                                     <h4>{{ .body }}</h4>
                                     <p>{{ .date }}</p>
                                 </div>
+                                <a href="{{ .link }}" class="btn btn-default btn-lg" style="align-self: flex-end;">
+                                    {{ .linkText }}
+                                </a>
                             </div>
-                            <!-- <a href="{{ .link }}" class="button" style="align-self: center;">{{ .linkText }}</a> -->
-                            <a href="{{ .link }}" class="btn btn-template-primary btn-lg" style="align-self: center;">
-                                {{ .linkText }}
-                            </a>
                         </div>
+
                     </li>
 
                     {{ end }}
