--- a/v1/themes/hugo-universal-theme/static/css/team-members.css
+++ b/v1/themes/hugo-universal-theme/static/css/team-members.css
@@ -255,7 +255,7 @@ button:hover {
 }
 
 .head-card-title {
-    color: #00867e;
+    color: #4a50c2;
     text-align: center;
     font-family: "Sen", Arial, Helvetica, sans-serif;
     font-size: 34px;
