--- a/v1/themes/hugo-universal-theme/static/css/style.blue.css
+++ b/v1/themes/hugo-universal-theme/static/css/style.blue.css
@@ -3175,7 +3175,7 @@ fieldset[disabled] .btn-template-primary.active {
   background-color: transparent;
 }
 .navbar-default .navbar-brand {
-  color: #555555;
+  color: #ffffff;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
