fix : footer color

--- a/v1/themes/hugo-universal-theme/static/css/style.blue.css
+++ b/v1/themes/hugo-universal-theme/static/css/style.blue.css
@@ -2591,7 +2591,7 @@ fieldset[disabled] .btn-template-primary.active {
   margin: 0 0 20px;
 }
 #footer {
-  background: #000f0e;
+  background: #4044a0;
   padding: 70px 0;
   color: #999999;
 }
