--- a/v1/themes/hugo-universal-theme/layouts/partials/entry.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/entry.html
@@ -1,12 +1,42 @@
-<section class="no-mb" style="height: 100vh;">
-    <div class="home-carousel">
-        {{ partial "carousel.html" . }}
-        <div class="dark-mask"></div>
-        <div class="container">
+<section class="no-mb"
+    style="height: 100vh;">
+    <div
+        class="home-carousel">
+        {{ partial
+        "carousel.html" . }}
+        <div
+            class="dark-mask">
+        </div>
+        <div
+            class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <h1>The top <strong style="color: #21a99f;"> eco-racing</strong> team in the MENA region.</h1>
-                    <p>Join us in shaping a greener and more sustainable future through the power of innovation.</p>
+                <div
+                    class="col-md-6">
+                    <h1>The
+                        top
+                        <strong
+                            style="color: #4a50c2;">
+                            eco-racing</strong>
+                        team
+                        in the
+                        MENA
+                        region.
+                    </h1>
+                    <p>Join us
+                        in
+                        shaping
+                        a
+                        greener
+                        and
+                        more
+                        sustainable
+                        future
+                        through
+                        the
+                        power
+                        of
+                        innovation.
+                    </p>
                     <!-- {{ partial "announcements.html" .}} -->
                 </div>
             </div>
