--- a/v1/themes/hugo-universal-theme/static/css/style.blue.css
+++ b/v1/themes/hugo-universal-theme/static/css/style.blue.css
@@ -3172,7 +3172,7 @@ fieldset[disabled] .btn-template-primary.active {
   }
 }
 .navbar-default {
-  background-color: transparent;
+  background-color: #4044a0;
 }
 .navbar-default .navbar-brand {
   color: #ffffff;
