fix: editing colors

--- a/v1/themes/hugo-universal-theme/layouts/partials/entry.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/entry.html
@@ -15,7 +15,7 @@
                     <h1>The
                         top
                         <strong
-                            style="color: #4a50c2;">
+                            style="color: #d4af37;">
                             eco-racing</strong>
                         team
                         in the
